--- a/mehman/src/app/globals.css
+++ b/mehman/src/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Forum&family=Rubik:ital,wght@0,300..900;1,300..900&family=Shadows+Into+Light&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&family=Shadows+Into+Light&display=swap');
 @tailwind base;
@@ -69,9 +70,10 @@
    * spacing
    */
    .headline-1 {
-    font-size: var(--fontSize-headline-1);
-    color:white;
+    font-family: "forum", cursive;
+    color: #E4C590;
     text-align: center;
+    font-size: 7rem;
 }
 --fontSize-headline-1: calc(2rem + 2.5vw);
   --section-padding: 60px;
@@ -637,8 +639,8 @@ body.active { overflow: hidden; }
 
 .hero-title {
   color: #FAF6E3;
-  font-family: var(--ff-rubik);
-  font-weight: normal;
+  font-family:  'Forum', cursive;
+  font-weight: bold;
   max-width: 12ch;
   margin-inline: auto;
 }
@@ -705,6 +707,7 @@ body.active { overflow: hidden; }
 .promo-card:hover :is(.card-title, .card-text) { color: var(--white); }
 
 .promo-card .card-title {
+  color: black;
   margin-block: 15px;
   transition: var(--transition-1);
 }
