--- a/mehman/src/app/globals.css
+++ b/mehman/src/app/globals.css
@@ -581,60 +581,93 @@ body.active { overflow: hidden; }
   #HERO
 \*-----------------------------------*/
 
-/* Show the hero-banner on all screen sizes */
-.hero-banner {
-  display: flex;
-  justify-content: center; /* Center the image */
-  align-items: center; /* Center vertically if needed */
-  margin-top: 20px; /* Add some space above the burger on mobile */
-  position: relative;
-  width: 100%;
-  height: auto;
-  animation: zoomInOut 5s infinite; /* Add zoom animation */
-}
 
-/* Hero image zoom animation */
-@keyframes zoomInOut {
-  0% {
-    transform: scale(1); /* Start at normal size */
-  }
-  50% {
-    transform: scale(1.1); /* Zoom in (grow) */
-  }
-  100% {
-    transform: scale(1); /* Zoom out (minimize) */
-  }
+.hero .slider-btn {
+  display: none;
 }
 
 .hero {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  padding-block: 145px 60px;
-  text-align: center;
+  position: relative;
+  padding-block: 120px;
+  min-height: 100vh;
+  overflow: hidden;
+  z-index: 1;
 }
 
-/* Responsive adjustments for the hero-banner on smaller screens */
-@media (max-width: 768px) {
-  .hero {
-    padding-block: 100px 40px; /* Adjust padding for smaller screens */
-  }
-  /* .headline-1{
-    font-size: 5rem;
-    font-weight: bold;
-    
-  } */
-  .hero-banner img.hero-img {
-    width: 85%; /* Increase the burger image size for mobile */
-    height: auto;
-  }
 
-  .hero-banner img.hero-img-bg {
-    display: none; /* Hide the background image on mobile if not needed */
+.hero .slider-item {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-content: center;
+  padding-block-start: 100px;
+  opacity: 0;
+  visibility: hidden;
+  transition: var(--transition-3);
+  z-index: 1;
+}
+.hero .container{
+  position: absolute;
+  top:20%;
+  left:10%;
+}
+.hero .slider-item.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.hero .slider-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: scale(1.15);
+  pointer-events: none;
+  user-select: none;
+  z-index: -1;
+}
+
+.hero .slider-item.active .slider-bg {
+  animation: smoothScale 7s linear forwards;
+}
+
+@keyframes smoothScale {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.15);
   }
 }
 
-/* Additional styling for the hero text elements */
+.hero .section-subtitle::after {
+  margin-block: 14px 20px;
+}
+
+.hero-text {
+  margin-block: 10px 40px;
+}
+
+.hero .btn {
+  margin-inline: auto;
+}
+
+.hero-btn {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  z-index: 2;
+  background-color: var(--gold-crayola);
+  width: 110px;
+  height: 110px;
+  padding: 12px;
+  transform: scale(0.6);
+}
 .hero-subtitle {
   color: var(--dark-orange);
   font-family: var(--ff-shadows-into-light);
@@ -644,9 +677,7 @@ body.active { overflow: hidden; }
 }
 
 .hero-title {
-  color: #FAF6E3;
-  font-family:  'Forum', cursive;
-  font-weight: bold;
+  color: var(--champagne-pink);
   max-width: 12ch;
   margin-inline: auto;
 }
@@ -668,6 +699,128 @@ body.active { overflow: hidden; }
   color: var(--black);
 }
 
+
+.hero-btn img {
+  margin-inline: auto;
+  margin-block-end: 6px;
+}
+
+.hero-btn .span {
+  color: var(--black);
+  font-weight: var(--weight-bold);
+  text-transform: uppercase;
+  letter-spacing: var(--letterSpacing-1);
+  line-height: var(--lineHeight-3);
+}
+
+.hero-btn::after {
+  inset: 0;
+  border: 1px solid var(--gold-crayola);
+  animation: rotate360 15s linear infinite;
+}
+
+.slider-reveal {
+  transform: translateY(30px);
+  opacity: 0;
+}
+
+.hero .slider-item.active .slider-reveal {
+  animation: sliderReveal 1s ease forwards;
+}
+
+@keyframes sliderReveal {
+  0% {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.hero .slider-item.active .section-subtitle {
+  animation-delay: 500ms;
+}
+
+.hero .slider-item.active .hero-title {
+  animation-delay: 1000ms;
+}
+
+.hero .slider-item.active .hero-text {
+  animation-delay: 1.5s;
+}
+
+.hero .slider-item.active .btn {
+  animation-delay: 2s;
+}
+@media (min-width: 575px) {
+
+}
+@media (min-width: 768px) {
+  /**
+   * REUSED STYLE
+   */
+
+  /* .grid-list {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  :is(.service, .event) .container {
+    max-width: 820px;
+  }
+
+  :is(.service, .event) .grid-list li:last-child {
+    grid-column: 1 / 3;
+    width: calc(50% - 20px);
+    margin-inline: auto;
+  } */
+
+  /**
+   * HEADER
+   */
+
+  .navbar-list {
+    margin-inline: 30px;
+  }
+
+  /**
+   * HERO
+   */
+
+  .hero .slider-btn {
+    display: grid;
+    position: absolute;
+    z-index: 1;
+    color: var(--gold-crayola);
+    font-size: 2.4rem;
+    border: 1px solid var(--gold-crayola);
+    width: 45px;
+    height: 45px;
+    place-items: center;
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg);
+    transition: var(--transition-1);
+  }
+
+  .hero .slider-btn ion-icon {
+    transform: rotate(-45deg);
+  }
+
+  .hero .slider-btn.prev {
+    left: 30px;
+  }
+
+  .hero .slider-btn.next {
+    right: 30px;
+  }
+
+  .hero .slider-btn:is(:hover, :focus-visible) {
+    background-color: var(--gold-crayola);
+    color: var(--black);
+  }
+}
 
 
 
