--- a/mehman/src/app/globals.css
+++ b/mehman/src/app/globals.css
@@ -102,7 +102,11 @@
   --clip-path-2: polygon(0 0%, 100% 0%, 100% 100%, 0 100%);
 
 }
-
+.img-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 
 
