fix: delivery section side padding

--- a/mehman/src/app/globals.css
+++ b/mehman/src/app/globals.css
@@ -494,6 +494,7 @@ body.active { overflow: hidden; }
 .navbar.active {
   height: 236px;
   visibility: visible;
+  background-color: #E4C590;
 }
 
 .navbar-list { margin-block: 10px; }
